layout issue fixed

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -31,7 +31,6 @@ margin: 0 auto;
 body.home #wrapper {
 	margin: 0 auto 20px auto ;
 }
-//body.full-width-layout #wrapper{margin: 0 auto 20px auto; }
 body.full-width-layout div#container, body.full-width-layout div#footer, body.full-width-no-box div#container, body.full-width-no-box div#footer {
     width: 100%;
     max-width: 100%;
@@ -41,10 +40,6 @@ body.full-width-layout div#container, body.full-width-layout div#footer, body.fu
 //body.full-width-layout #wrapper #content-outer {background-color: #ffffff; display: table;width: 70%;padding: 22px;border: 1px solid #e5e5e5;-moz-border-radius: 4px;-webkit-border-radius: 4px;border-radius:4px;
 }
 .full-width-no-box .skip-container { padding: 0px;}
-.full-width-no-box #logo {
-	//margin: 10px 0;
-	padding: 10px 0;
-}
 .full-width-no-box #header {background-color: #585858;	}
 .full-width-no-box .top-menu {margin: 0; padding-top: 4px;}
 .full-width-no-box .main-nav  {
